# fluvel

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
docs/md/: architecture.md  deployment.md  i18n.md  reactivity.md  roadmap.md  styling.md  ui-design.md
docs/md/core/: app.md  config-toml.md
docs/md/engines/: fluml.md  qss.md
docs/md/pyro/: MANIFEST.pyro.md  rules.md
fluvel/: __init__.py
fluvel/cli/: cli.py
fluvel/cli/commands/: build.py  clean.py  demo.py  generate_stubs.py  run.py  startproject.py
fluvel/cli/reloader/: HReloader.py
fluvel/cli/templates/: __init__.py  config_schema.py  config_template.py  fluml_template.py  fluvel_bootstrap_theme.py  gitignore_template.py  mainpy_template.py  page_template.py  readme_template.py  theme_template.py  window_template.py  xml_schema.py
fluvel/cli/tools/: ClickStyled.py  ClickStyledMessage.py  StubGenerator.py
fluvel/components/: __init__.py
fluvel/components/gui/: FAction.py
fluvel/components/layouts/: GridLayout.py  HBoxLayout.py  VBoxLayout.py  __init__.py
fluvel/components/widgets/: FButton.py  FCheckBox.py  FComboBox.py  FDecimalBox.py  FIcon.py  FIconButton.py  FImage.py  FInput.py  FInputArea.py  FIntBox.py  FLabel.py  (+8 more)
fluvel/composer/: Animator.py  Factory.py  Prefab.py  __init__.py
fluvel/core/: App.py  AppWindow.py  MenuBar.py  Router.py  State.py  __init__.py
fluvel/engines/: __init__.py  fluml.py  xml.py
fluvel/i18n/: I18nLoader.py  I18nProvider.py  I18nTextVar.py  ResourceManager.py  __init__.py  data_structures.py
fluvel/reactive/: Model.py  StateManager.py  __init__.py
fluvel/tools/: QtaTools.py  __init__.py
fluvel/user/: MenuOptions.py  UserSettings.py  __init__.py
fluvel/utils/: __init__.py  minify_qss.py  paths.py  tip_helpers.py
playground/example_app/: app.py  config.toml  window.py
public/: minimal.utils.qss  tailwind.utils.qss
(+76 files in other folders)
